# mono

./: .bazelrc  CODEOWNERS  README.md
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: Build.yaml  Sparse.yaml  create_issue.yaml  exp-c-CICD.yaml  exp-d-CICD.yaml  exp-e-CICD.yaml  issue_template.md  reuse.yaml
exp_c/code/: BUILD.bazel  app.py  empDetails.py
exp_c/myProj/ProjB/: BUILD.bazel
exp_c/myProj/ProjC/: BUILD.bazel  example1.c
exp_c/myProj/ProjC/c/: example2.c
exp_c/myProj/ProjC/cpp/: example3.cpp  example4.cpp  example5.cpp
exp_c/myProj/projA/: BUILD.bazel
exp_c/myProj/projA/inc/: Foo.hpp  NewApp.h
exp_c/myProj/projA/src/: Foo.cpp  NewApp.cpp  hello.cpp
exp_d/: Dockerfile
exp_d/code/: app.py  empDetails.py  slp.py
exp_e/code/: app.py  empDetails.py  slp.py
