genrule(
    name = "foo",
    srcs = [],
    outs = ["foo.txt"],
    cmd = "sleep 5 && echo 'Hello Satish!' >$@",
)

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
  name = "hello",
  srcs = ["src/hello.cpp"],
)

load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
  name = "NewApp",
  srcs = ["src/NewApp.cpp"],
  hdrs = ["inc/NewApp.h"],
)
